@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.31 2002/11/23 01:06:14 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.32 2002/12/17 22:09:25 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -1086,7 +1086,25 @@ add_printer(client_t        *con,	/* I - Client connection */
                  &port, resource);
     methodlen = strlen(method);
 
-    if (strcmp(method, "file") != 0)
+    if (strcmp(method, "file") == 0)
+    {
+     /*
+      * See if the administrator has enabled file devices...
+      */
+
+      if (!FileDevice)
+      {
+       /*
+        * Could not find device in list!
+	*/
+
+	LogMessage(L_ERROR, "add_printer: File device URIs have been disabled! "
+	                    "To enable, see the FileDevice directive in cupsd.conf.");
+	send_ipp_error(con, IPP_NOT_POSSIBLE);
+	return;
+      }
+    }
+    else
     {
      /*
       * See if the backend is listed as a device...
@@ -6050,5 +6068,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.31 2002/11/23 01:06:14 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.32 2002/12/17 22:09:25 mike Exp $".
  */
